Store image logic modified